--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,9 +1,27 @@
+.response-section {
+    margin-left: 40px;
+    width: 70%;
+}
+
+.analysis-section {
+    margin-left: 40px;
+    width: 70%;
+}
+
+.summary-section {
+    margin-left: 40px;
+    width: 70%;
+}
+
+.chart-block {
+
+}
 
 .chart {
     margin-bottom: 50px;
 }
 
-.response-count {
+.response-count-block {
     width: 50%;
     margin-bottom: 50px;
     margin-left: 20%;
@@ -15,13 +33,21 @@
 }
 
 .response-count-row {
+    overflow: hidden;
     clear: both;
-    margin-left: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
+}
+
+.response-count-row:nth-of-type(even) {
+    background-color: #EBF4FA;
+}
+
+.response-count-row:hover {
+    background-color: #eee;
 }
 
 .response-count-label {
-    width: 60%;
+    width: 70%;
     float: left;
     margin-left: 50px;
     margin-bottom: 5px;
@@ -34,23 +60,26 @@
     margin-bottom: 5px;
 }
 
-.summary-section {
-    margin-left: 40px;
-}
 
 .summary-item {
     width: 75%;
-    margin-bottom: 50px;
-    border-bottom-style: dashed;
-    border-bottom-width: 1px;
+    #margin-bottom: 50px;
+    border: thin ridge;
+}
+
+.summary-item-row {
+    overflow: hidden;
+    margin-bottom: 5px;
+    clear: both;
 }
 
 .summary-item-label {
     font-weight: bold;
-    margin-bottom: 2px;
+    float: left;
+    width: 250px;
+    overflow: hidden;
 }
 
 .summary-item-value {
-    margin-left: 50px;
-    margin-bottom: 2px;
+    overflow: hidden;
 }
